--- a/css/styles.css
+++ b/css/styles.css
@@ -162,12 +162,9 @@ body {
 }
 .benefits-list {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-between;
 
   column-gap: 8px;
-}
-.benefits-item {
-  width: calc((100% - 24px) / 4);
 }
 
 .item-benefits-title {
@@ -188,12 +185,12 @@ body {
 
 .team-list {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-between;
   column-gap: 24px;
 }
+
 .team-item {
   display: block;
-  width: calc((100% - 72px) / 4);
   background-color: white;
   border-radius: 0px 0px 4px 4px;
 }
